# viji-backend

./: Cargo.toml  Dockerfile  README.md  config.rs  database.rs  env.example  loginapp.db  main.rs  setup-database.sh  setup-db-simple.sh  setup-postgres-simple.sh
